google-cloud-platform/k8s/shortliner/04-service-shortliner.yaml
apiVersion: v1
kind: Service
metadata:
  name: shortliner-svc
  namespace: shortliner
spec:
  selector:
    app: shortliner
  ports:
    - port: 8080
      targetPort: 8080
