google-cloud-platform/k8s/shortliner/05-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shortliner-frontend
  namespace: shortliner
spec:
  parentRefs:
    - kind: Gateway
      name: shortliner-gateway
  hostnames:
    - "shortliner.lukaszsiedlecki.com"
  rules:
    - backendRefs:
        - name: shortliner-frontend-svc
          port: 80
